<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vibeosys</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dev_reg">Device Registration</string>
    <string name="cust_id">Customer ID</string>
    <string name="password">Password</string>
    <string name="login_id">Login ID</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="copyright">Ver 1.0 \n Vibeosys Software Pvt Ltd.</string>

    <string-array name="home_tabs">
        <item>Tables</item>
        <item>My Serving</item>
    </string-array>

    <string-array name="payment_types">
        <item>Cash</item>
        <item>Debit/Credit Cars</item>
        <item>Cheque</item>
    </string-array>

    <string name="title_activity_order">Order</string>
    <string name="order_for">Orders For Table #</string>
    <string name="view">View</string>
    <string name="reg_success">Device Registration Successful</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="current_order">Current Order</string>
    <string name="items_selected_review">Items selected \n Review Order</string>

</resources>
