<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:text="@string/dev_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:singleLine="true"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/cust_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/customer_id"
        />

    <EditText
        android:singleLine="true"
        android:ellipsize="start"
        android:inputType="numberPassword"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:text="@string/register"/>
    </LinearLayout>

    <TextView
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:text="@string/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
