<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:text="Marriott"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:scaleType="centerInside"
            android:layout_height="150dp"
            android:src="@drawable/hotel_logo"/>

        <EditText
            android:singleLine="true"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:hint="@string/login_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/userid"
            />

        <EditText
            android:singleLine="true"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:hint="@string/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:text="@string/login"/>
    </LinearLayout>

    <TextView
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:text="@string/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
